refactor: CheckStyle correction and Warning removal - Fixed CheckStyle and removed warnings for: Model, Main, Navigation, Util packages - Refactored